[package]
name = "copycolors"
description = "A command Line Utility to extract dominant colors from local or remote image files."
version = "0.1.0"
edition = "2021"
author = "Abdoul ISSA BIDA <issamadjid1995@gmail.com>"
license = "MIT" # https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/AbdoulMa/copycolors"
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]] 
name = "copycolors"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-thief = "0.2.2"
image = "0.24.6"
tempfile = "3.5.0"
ureq =  { version = "2.6.2",  features = ["native-tls", "tls"] } 
url = "2.3.1"
regex = "1.8.1"
crossterm = "0.26.1"
clap = "4.3.0"
openssl = { version = "0.10.40", features = ["vendored"] }

[profile.dev]
opt-level = 1 # Make debug run faster 
panic = "abort" # Better optimization & small binaries

# Optimize all dependencies even in debug builds (does not affect workspace packages)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true 
strip = true 
opt-level =  "z"
panic = "abort"
codegen-units = 1 
